# AiChemistArchivum

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  archivum.bat  pyproject.toml  ruff.toml  setup.py  start.bat  start.py  start.sh  test_config_path.py  uv.toml
backend/: quick_init.py
backend/src/aichemist_archivum/config/: __init__.py  settings.py
backend/src/aichemist_archivum/config/loader/: config_loader.py
backend/src/aichemist_archivum/config/rules/: __init__.py  rules_engine.py
backend/src/aichemist_archivum/config/security/: secure_config.py
backend/src/aichemist_archivum/core/: embeddings.py
backend/src/aichemist_archivum/core/analysis/: code.py  relationship_graph.py  technical_analyzer.py
backend/src/aichemist_archivum/core/extraction/: base_extractor.py  code.py  documents.py  extractors.py
backend/src/aichemist_archivum/core/fs/: __init__.py  changes.py  directory.py  file_metadata.py  file_reader.py  operations.py
backend/src/aichemist_archivum/core/parsing/: parsers.py
backend/src/aichemist_archivum/core/repositories/: __init__.py  file_code_artifact_repository.py  sqlite_memory_repository.py  sqlite_relationship_repository.py  sqlite_tag_hierarchy_repository.py  sqlite_tag_repository.py
backend/src/aichemist_archivum/core/search/: search_engine.py
backend/src/aichemist_archivum/core/search/providers/: regex_provider.py  similarity_provider.py
backend/src/aichemist_archivum/core/tagging/: classifier.py  schema.py
backend/src/aichemist_archivum/core/versioning/: __init__.py  diff_engine.py  rollback.py
backend/src/aichemist_archivum/interfaces/: README.md
backend/src/aichemist_archivum/interfaces/cli/: __init__.py  cli.py  commands.py
backend/src/aichemist_archivum/interfaces/cli/commands/: __init__.py  analyze.py  config.py  ingest.py  search.py  tag.py  version.py
backend/src/aichemist_archivum/interfaces/electron/: README.md
backend/src/aichemist_archivum/interfaces/grpc/: README.md
backend/src/aichemist_archivum/interfaces/mcp/: __init__.py  __main__.py
backend/src/aichemist_archivum/interfaces/mcp/server/: __init__.py  mcp_server.py
backend/src/aichemist_archivum/interfaces/mcp/tools/: __init__.py  tools.py
backend/src/aichemist_archivum/services/: database_service.py  ingestion_service.py  notification_service.py  rollback_engine.py  rollback_transaction.py  rule_engine.py  tagging_service.py  versioning_service.py
backend/src/aichemist_archivum/utils/: batch_processor.py  file_utils.py
backend/src/aichemist_archivum/utils/cache/: cache_manager.py
backend/src/aichemist_archivum/utils/common/: patterns.py  safety.py
backend/src/aichemist_archivum/utils/concurrency/: concurrency.py
backend/src/aichemist_archivum/utils/io/: async_io.py  sqlasync_io.py
backend/tests/: conftest.py  test_database.py  test_ingestion.py
backend/tests/integration/: test_cli_flow.py
config/: config.yaml
data/: .codex_secure.key  archivum.db  search_index.sqlite
docs/: ARCHITECTURE.md  CI_SAMPLES.md  CLI_USAGE.md  CONFIGURATION.md  CONTRIBUTING.md  FAQ.md  MCP_ERROR_FIX.md  MCP_TEST_RESULTS.md  MCP_USAGE.md  PLUGIN_SDK.md  ROADMAP.md  SECURITY_BEST_PRACTICES.md  TESTING.md  python314.md
src/aichemist_archivum/core/search/: search_engine.py
src/aichemist_archivum/shared/common/: safety.py
